syntax = "proto3";

package com.aboutme.core.datastore.proto;

option java_package = "com.aboutme.core.datastore.proto";
option java_multiple_files = true;

enum ColorModeProto {

  Light = 0;

  Dark = 1;

  System = 2;

}