syntax = "proto3";

package com.aboutme.core.datastore.proto;

option java_package = "com.aboutme.core.datastore.proto";
option java_multiple_files = true;

message SyncPreferencesProto {

  //
  // Modes
  //

  bool not = 1;

  bool onEnter = 2;

  bool onChange = 3;

  bool periodically = 4;

  //
  // Misc. info
  //

  string duration = 5;

  bool onlyWifi = 6;

}